Move logout button to settings page

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -22,4 +22,5 @@
       </ion-checkbox>
     </ion-item>
   </ion-list>
+  <ion-button expand="block" fill="solid" color="light" (click)="logout()">Log out</ion-button>
 </ion-content>
