Show user id on settings page

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -23,4 +23,7 @@
     </ion-item>
   </ion-list>
   <ion-button expand="block" fill="solid" color="light" (click)="logout()">Log out</ion-button>
+  <footer>
+    <p>User ID: {{activeUser?.id}}</p>
+  </footer>
 </ion-content>
