--- a/src/app/pages/home/location-modal/ley-line-modal/ley-line-modal.component.html
+++ b/src/app/pages/home/location-modal/ley-line-modal/ley-line-modal.component.html
@@ -12,10 +12,9 @@
   <div class="runestone-flex-wrap">
     <div class="padding-10">
       <app-modal-header
-        [title]="locationObject.name"
-        icon="/assets/icon/location/runestone.svg"
+        title="Ley Line"
+        icon="/assets/icon/location/ley-line.svg"
         [iconBorder]="false"
-        iconColor="medium"
       >
       </app-modal-header>
     </div>
