--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -22,6 +22,22 @@ ion-header {
     font-size: 10px;
     margin: 0 0 3px 0;
   }
+
+  ion-button {
+    max-width: 55px;
+  }
+  .button-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--ion-color-medium);
+    text-transform: initial;
+
+    ion-label {
+      font-size: 10px;
+      margin: 3px 0 3px 0;
+    }
+  }
   ion-icon {
     color: #ddd;
     width: 35px;
