--- a/src/app/pages/launch/launch.page.scss
+++ b/src/app/pages/launch/launch.page.scss
@@ -2,7 +2,7 @@
   --background: url("/assets/strawberry-battlefield.png") 0 0/100% 100% no-repeat;
 }
 .login-debug {
-  color: black;
+  color: white;
   font-family: monospace, serif;
 }
 h1 {
