--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -8,6 +8,10 @@
 
 ion-header {
   background: rgba(10, 10, 10, 0.8);
+
+  ion-grid {
+    padding: 4px 2px 1px;
+  }
 }
 .map-toolbar {
   ion-col {
@@ -24,7 +28,8 @@ ion-header {
   }
 
   ion-button {
-    max-width: 55px;
+    --padding-start: 4px;
+    --padding-end: 4px;
   }
   .button-column {
     display: flex;
@@ -36,6 +41,7 @@ ion-header {
     ion-label {
       font-size: 10px;
       margin: 3px 0 3px 0;
+      font-weight: normal;
     }
   }
   ion-icon {
@@ -45,7 +51,6 @@ ion-header {
 
     &.menu-icon-inventory {
       width: 31px;
-      height: 31px;
     }
   }
 }
