Basic Journal modal

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
             <ion-label>Inventory</ion-label>
           </div>
         </ion-button>
-        <ion-button size="small" fill="clear" (click)="openJournal()">
+        <ion-button size="small" fill="clear" (click)="openJournalModal()">
           <div class="button-column">
             <ion-icon slot="icon-only" src="/assets/icon/menu-icon-journal.svg" class="menu-icon-journal" color="medium"></ion-icon>
             <ion-label>Journal</ion-label>
