--- a/src/app/pages/home/location-modal/runestone-modal/runestone-modal.component.scss
+++ b/src/app/pages/home/location-modal/runestone-modal/runestone-modal.component.scss
@@ -21,7 +21,22 @@
   text-align: justify;
   box-shadow: -12px -19px 60px 0px rgb(5 46 0 / 50%) inset;
   line-height: 1.25em;
-  font-size: 1.05em;
+  font-size: 0.95em;
+}
+
+p {
+  min-height: 22.5px;
+}
+
+ion-icon {
+  display: inline-block;
+  font-size: 21px;
+  vertical-align: middle;
+}
+
+span {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .runestone-controls {
