Big item update

--- a/src/app/pages/compendium/compendium.scss
+++ b/src/app/pages/compendium/compendium.scss
@@ -5,7 +5,7 @@ header {
   padding: 0;
 
   > * {
-    width: auto; /* Adjust this as needed, could be a percentage or fixed width */
+    width: auto;
     padding-right: 10px;
   }
 }
