--- a/src/app/components/map-marker/map-marker.component.html
+++ b/src/app/components/map-marker/map-marker.component.html
@@ -1,4 +1,5 @@
 <div (click)="handleClick()" class="{{getMarkerClass()}}">
+  <div *ngIf="location.level && userService.activeUser?.preferences?.dungeonLevels" class="marker-digit">{{location.level}}</div>
   <div *ngIf="location.expiresAt" class="marker-timer">{{location.expiresAt | countdown}}</div>
   <div class="marker-graphics" [ngStyle]="{'width.px': iconSize, 'height.px': iconSize}">
     <div class="marker-icon" [innerHTML]="dynamicSvg"></div>
