--- a/src/app/pages/home/location-modal/dungeon-modal/dungeon-modal.component.html
+++ b/src/app/pages/home/location-modal/dungeon-modal/dungeon-modal.component.html
@@ -6,55 +6,57 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content *ngIf="locationObject" class="ion-padding">
-  <!--<div class="modal-bg"></div>-->
-  <app-modal-header
-    [icon]="locationObject.monster.icon"
-    [title]="locationObject.monster.name"
-    [description]="'Level '+locationObject.monster.level+' '+locationObject.monster.classification"
-    [quote]="locationObject.monster.description"
-  ></app-modal-header>
-  <div *ngIf="analysis;" class="ion-text-center ion-margin-bottom">
-    <h2>Assessment: <span [class]="'assessment-'+analysis.assessment.toLowerCase()">{{analysis.assessment}}</span></h2>
-    <p class="detail-line compact">Base chance: {{analysis.baseChance}}%</p>
-    <ion-text color="success">
-      <p *ngFor="let modifier of analysis.modifiersPositive" class="detail-line compact">{{modifier}}</p>
-    </ion-text>
-    <ion-text color="danger">
-      <p *ngFor="let modifier of analysis.modifiersNegative" class="detail-line compact">{{modifier}}</p>
-    </ion-text>
-    <h3>
-      Chance of success: {{analysis.chanceOfSuccess}}%
-      <span *ngIf="analysis.overkill">({{analysis.overkill}} overkill)</span>
-    </h3>
-    <p *ngIf="analysis.riskOfDeath.overall" class="detail-line"><b>Risk of death: {{analysis.riskOfDeath.overall}}%</b></p>
-<!--    <p *ngIf="analysis.chanceOfInventoryLoss" class="detail-line">Chance of inventory loss: {{analysis.chanceOfInventoryLoss}}%</p>-->
-<!--    <p *ngIf="analysis.chanceOfEquipmentLoss" class="detail-line">Chance of equipment loss: {{analysis.chanceOfEquipmentLoss}}%</p>-->
-<!--    <ion-text color="secondary">-->
-<!--      <p *ngFor="let modifier of analysis.modifiersDeath" class="detail-line">{{modifier}}</p>-->
-<!--    </ion-text>-->
+<ion-content *ngIf="locationObject">
+  <div class="padding-10">
+    <!--<div class="modal-bg"></div>-->
+    <app-modal-header
+      [icon]="locationObject.monster.icon"
+      [title]="locationObject.monster.name"
+      [description]="'Level '+locationObject.monster.level+' '+locationObject.monster.classification"
+      [quote]="locationObject.monster.description"
+    ></app-modal-header>
+    <div *ngIf="analysis;" class="ion-text-center ion-margin-bottom">
+      <h2>Assessment: <span [class]="'assessment-'+analysis.assessment.toLowerCase()">{{analysis.assessment}}</span></h2>
+      <p class="detail-line compact">Base chance: {{analysis.baseChance}}%</p>
+      <ion-text color="success">
+        <p *ngFor="let modifier of analysis.modifiersPositive" class="detail-line compact">{{modifier}}</p>
+      </ion-text>
+      <ion-text color="danger">
+        <p *ngFor="let modifier of analysis.modifiersNegative" class="detail-line compact">{{modifier}}</p>
+      </ion-text>
+      <h3>
+        Chance of success: {{analysis.chanceOfSuccess}}%
+        <span *ngIf="analysis.overkill">({{analysis.overkill}} overkill)</span>
+      </h3>
+      <p *ngIf="analysis.riskOfDeath.overall" class="detail-line"><b>Risk of death: {{analysis.riskOfDeath.overall}}%</b></p>
+  <!--    <p *ngIf="analysis.chanceOfInventoryLoss" class="detail-line">Chance of inventory loss: {{analysis.chanceOfInventoryLoss}}%</p>-->
+  <!--    <p *ngIf="analysis.chanceOfEquipmentLoss" class="detail-line">Chance of equipment loss: {{analysis.chanceOfEquipmentLoss}}%</p>-->
+  <!--    <ion-text color="secondary">-->
+  <!--      <p *ngFor="let modifier of analysis.modifiersDeath" class="detail-line">{{modifier}}</p>-->
+  <!--    </ion-text>-->
+    </div>
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col>
+          <ion-button expand="block" fill="outline" color="secondary" (click)="analyze()" [disabled]="loading || analysis">
+            <ion-icon color="secondary" slot="start" src="/assets/icon/magnifying-glass.svg"></ion-icon> Analyze
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button expand="block" fill="outline" color="dark" (click)="openCharacterModal()" [disabled]="loading">
+            <ion-icon slot="start" src="/assets/icon/switch-weapon.svg"></ion-icon> Change equipment
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <!--
+    <ng-template #analyzeButton>
+      <ion-button expand="full" (click)="analyze()" [disabled]="loading">Analyze</ion-button>
+    </ng-template>
+    <ion-button expand="full" (click)="changeEquipment()" [disabled]="loading">Change equipment</ion-button>
+    -->
+    <ion-button expand="block" color="danger" (click)="battle()" [disabled]="loading">
+      <ion-icon slot="start" src="/assets/icon/light-sabers.svg"></ion-icon> Battle!
+    </ion-button>
   </div>
-  <ion-grid class="ion-no-padding">
-    <ion-row>
-      <ion-col>
-        <ion-button expand="block" fill="outline" color="secondary" (click)="analyze()" [disabled]="loading || analysis">
-          <ion-icon color="secondary" slot="start" src="/assets/icon/magnifying-glass.svg"></ion-icon> Analyze
-        </ion-button>
-      </ion-col>
-      <ion-col>
-        <ion-button expand="block" fill="outline" color="dark" (click)="openCharacterModal()" [disabled]="loading">
-          <ion-icon slot="start" src="/assets/icon/switch-weapon.svg"></ion-icon> Change equipment
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <!--
-  <ng-template #analyzeButton>
-    <ion-button expand="full" (click)="analyze()" [disabled]="loading">Analyze</ion-button>
-  </ng-template>
-  <ion-button expand="full" (click)="changeEquipment()" [disabled]="loading">Change equipment</ion-button>
-  -->
-  <ion-button expand="block" color="danger" (click)="battle()" [disabled]="loading">
-    <ion-icon slot="start" src="/assets/icon/light-sabers.svg"></ion-icon> Battle!
-  </ion-button>
 </ion-content>
