--- a/src/app/pages/home/location-modal/base-modal/base-modal.component.html
+++ b/src/app/pages/home/location-modal/base-modal/base-modal.component.html
@@ -35,10 +35,10 @@
   </div>
 
   <p *ngIf="inventoryView === 'inventory' && !inventory?.items?.length" class="ion-text-center">Empty</p>
-  <ion-grid *ngIf="inventoryView === 'inventory'; else storage" class="inventory-list no-padding-top">
-    <ion-row *ngFor="let item of inventory?.items" class="inventory-list-item">
+  <ion-grid *ngIf="inventoryView === 'inventory'; else storage" class="rw-list no-padding-top">
+    <ion-row *ngFor="let item of inventory?.items" class="rw-list-item">
       <ion-col size="auto">
-        <app-item-icon [item]="item" class="inventory-item-icon"></app-item-icon>
+        <app-item-icon [item]="item"></app-item-icon>
       </ion-col>
       <ion-col>
         <ion-label>{{item.name}}</ion-label>
@@ -68,10 +68,10 @@
   </ion-grid>
   <ng-template #storage>
     <p *ngIf="!locationObject.inventory.items.length" class="ion-text-center">Empty</p>
-    <ion-grid class="inventory-list no-padding-top">
-      <ion-row *ngFor="let item of locationObject.inventory.items" class="inventory-list-item">
+    <ion-grid class="rw-list no-padding-top">
+      <ion-row *ngFor="let item of locationObject.inventory.items" class="rw-list-item">
         <ion-col size="auto">
-          <app-item-icon [item]="item" class="inventory-item-icon"></app-item-icon>
+          <app-item-icon [item]="item"></app-item-icon>
         </ion-col>
         <ion-col>
           <ion-label>{{item.name}}</ion-label>
