--- a/src/app/pages/home/location-modal/npc-modal/npc-modal.component.html
+++ b/src/app/pages/home/location-modal/npc-modal/npc-modal.component.html
@@ -30,8 +30,10 @@
         <ion-label>Sell</ion-label>
       </ion-segment-button>
     </ion-segment>
+  </div>
 
-    <p *ngIf="locationObject.spooked; else openForBusiness" class="ion-text-center">
+  <div *ngIf="locationObject.spooked; else openForBusiness" class="padding-10">
+    <p class="ion-text-center">
       This npc will not trade as long as there are monsters nearby.
     </p>
   </div>
@@ -39,10 +41,10 @@
   <ng-template #openForBusiness>
     <div *ngIf="tradingMode === 'buy'; else sell">
       <p *ngIf="!locationObject.sellOffers.length" class="ion-text-center">Nothing for sale.</p>
-      <ion-grid class="inventory-list no-padding-top">
-        <ion-row *ngFor="let offer of locationObject.sellOffers" class="inventory-list-item">
+      <ion-grid class="rw-list no-padding-top">
+        <ion-row *ngFor="let offer of locationObject.sellOffers" class="rw-list-item">
           <ion-col size="auto">
-            <ion-icon [src]="offer.icon" color="dark" class="inventory-item-icon"></ion-icon>
+            <ion-icon [src]="offer.icon" color="dark" class="rw-list-item-icon"></ion-icon>
           </ion-col>
           <ion-col>
             <ion-label>{{offer.name}}</ion-label>
@@ -73,10 +75,10 @@
     </div>
     <ng-template #sell>
       <p *ngIf="!buyOffersFiltered.length" class="ion-text-center">Nothing to sell.</p>
-      <ion-grid class="inventory-list no-padding-top">
-        <ion-row *ngFor="let offer of buyOffersFiltered" class="inventory-list-item">
+      <ion-grid class="rw-list no-padding-top">
+        <ion-row *ngFor="let offer of buyOffersFiltered" class="rw-list-item">
           <ion-col size="auto">
-            <ion-icon [src]="offer.icon" color="dark" class="inventory-item-icon"></ion-icon>
+            <ion-icon [src]="offer.icon" color="dark" class="rw-list-item-icon"></ion-icon>
           </ion-col>
           <ion-col>
             <ion-label>{{offer.name}}</ion-label>
