--- a/src/app/pages/home/location-modal/runestone-modal/runestone-modal.component.html
+++ b/src/app/pages/home/location-modal/runestone-modal/runestone-modal.component.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content *ngIf="locationObject && !loading">
-  <div class="runestone-flex-wrap">
+  <div class="rw-flex-stack">
     <div class="padding-10">
       <app-modal-header
         [title]="locationObject.name"
