--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <ng-template #ready>
     <ion-router-outlet></ion-router-outlet>
   </ng-template>
-  <div *ngIf="userService.activeUser?.preferences?.developer" class="debug ion-text-right">
+  <div *ngIf="userService.activeUser?.preferences?.developer" class="debug">
     <span *ngIf="location.permissionError; else coordinates">permissionError=true</span>
     <ng-template #coordinates>{{location.latitude}}, {{location.longitude}}</ng-template>
     <div>Server time: {{api.serverTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
