--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .debug {
   position: fixed;
   bottom: 0;
-  right: 0;
+  left: 0;
   font-size: 12px;
   color: black;
-  background: rgba(255,255,255,0.5);
+  background: #eee;
   z-index: 100;
 }
