--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -37,7 +37,7 @@
   <app-events-toolbar *ngIf="activeEvents.length" [active]="activeEvents"></app-events-toolbar>
 </ion-header>
 
-<div class="map" id="map"></div>
+<div class="map" id="mapContainer"></div>
 
 <ion-fab *ngIf="userService.activeUser?.base === null" slot="fixed" vertical="center" horizontal="start">
   <ion-fab-button (click)="openConstructionModal()" size="small">
