--- a/src/app/pages/home/location-modal/npc-modal/npc-modal.component.html
+++ b/src/app/pages/home/location-modal/npc-modal/npc-modal.component.html
@@ -13,7 +13,7 @@
     <app-modal-header
       [icon]="locationObject.portrait"
       [title]="locationObject.name"
-      [description]="locationObject.role"
+      [description]="locationObject.jobTitle"
       [quote]="locationObject.greeting"
     >
       <ion-chip class="coin-icon header-coin-insert">
