--- a/src/global.scss
+++ b/src/global.scss
@@ -169,6 +169,7 @@ ion-modal.floating-modal {
 }
 
 .rw-list {
+  width: 100%;
   padding-left: 5px;
   padding-right: 5px;
 
@@ -189,8 +190,11 @@ ion-modal.floating-modal {
 .rw-flex-stack {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   height: 100%;
+
+  &.space-between {
+    justify-content: space-between;
+  }
 }
 
 .detail-line {
