--- a/src/app/pages/credits/credits.page.html
+++ b/src/app/pages/credits/credits.page.html
@@ -14,6 +14,7 @@
   </ion-text>
   <p>Design and Development by Alice Carlsson</p>
   <small>
+    <p>Sound from Zapsplat.com.</p>
     <p>Icons by game-icons.net. Some icons have been altered.</p>
     <p>Special thanks to: Lara L, Hanna B</p>
   </small>
