--- a/src/app/components/modal-header/modal-header.component.html
+++ b/src/app/components/modal-header/modal-header.component.html
@@ -6,10 +6,10 @@
     <ion-col class="relative">
       <ion-text [color]="titleColor">
         <h1 *ngIf="title" class="ion-no-margin">{{title}}</h1>
-        <p *ngIf="description" class="description">{{description}}</p>
+        <p *ngIf="description" class="description" [ngClass]="descriptionStyle">{{description}}</p>
       </ion-text>
       <ng-content></ng-content>
     </ion-col>
   </ion-row>
 </ion-grid>
-<p *ngIf="quote" class="quote-box">{{quote}}</p>
+<p *ngIf="quote" class="quote-box" [innerText]="quote"></p>
