--- a/src/app/components/modal-header/modal-header.component.scss
+++ b/src/app/components/modal-header/modal-header.component.scss
@@ -5,8 +5,11 @@ h1 {
   font-size: 24px;
 }
 .description {
-  font-style: italic;
-  font-weight: 300;
-  text-transform: capitalize;
   margin: 0.3em 0 3.5px 0;
+  font-style: italic;
+
+  &.capitalize {
+    font-weight: 300;
+    text-transform: capitalize;
+  }
 }
