--- a/src/app/pages/home/location-modal/dungeon-modal/battle-result-modal/battle-result-modal.component.html
+++ b/src/app/pages/home/location-modal/dungeon-modal/battle-result-modal/battle-result-modal.component.html
@@ -50,10 +50,10 @@
   <!-- LOOT -->
   <div *ngIf="data.battleResult.userWon;" class="ion-margin-top">
     <div *ngIf="data.battleResult.monsterDied; else monsterEscapedLoot">
-      <div *ngIf="data.inventoryChanges?.loot?.gold || data.inventoryChanges?.loot?.items!.length; else noLoot">
+      <div *ngIf="data.inventoryChanges?.loot?.empty === false; else noLoot">
         <p>
           Loot from {{monsterName}}:<br>
-          {{formattedLootList()}}
+          {{data.inventoryChanges!.loot!.formattedLootList()}}
         </p>
       </div>
       <ng-template #noLoot>
